--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Flask
+deepgram-sdk
+python-dotenv
+flask
 flask-cors
-opencv-python
+opencv-python-headless
 numpy
-mediapipe==0.10.20
-torch
-torchaudio
+pandas
+mediapipe
+xgboost
 transformers
+torch
 librosa
-soundfile
-moviepy>=1.0.3
-msvc-runtime
